# pypes-gui

./: .gitignore  LICENSE  README.md  compose_build.sh  docker-compose.yml  export.py  main.py  nodes.py  prototype.py  requirements.txt  utils.py  visualize.py
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  Dockerfile  api_interface.py  config.py  logger.py  main.py  models.py  pyproject.toml  utils.py
backend/database/: crud.py  db_models.py  session.py
backend/routes/: connection.py  file_management.py  manage_scenario.py  network.py  node.py  parameter_routes.py  tag.py  user.py
backend/utility/: node_utils.py
frontend/: .env  .eslintrc.json  .gitignore  Dockerfile  build_frontend_image.sh  package.json  tailwind.config.js
frontend/src/: interfaces.ts  middleware.ts  types.d.ts
frontend/src/components/: layout.tsx
frontend/src/components/analytics/: area-line-chart.tsx  multi-line-chart.tsx  stacked-analytics-chart.tsx
frontend/src/components/connection-creation-modal/: connection-creation-modal.tsx
frontend/src/components/connection-details/: connection-details.tsx
frontend/src/components/data-ingestion/: addTagRowPopup.tsx  (+8 more)
frontend/src/pages/: _app.tsx  global.css  index.tsx  layout.tsx
frontend/src/store/: node.slice.ts  store.ts
frontend/src/utils/: trpc.ts
pypes-gui/: .env  .eslintrc.json  Dockerfile  connections.py  constants.py  export.py  main.py  next.config.js  nodes.py  package.json  run_frontend_container.sh  tags.py  tsconfig.json  utils.py  visualize.py
pypes-gui/src/: interfaces.ts  middleware.ts
pypes-gui/src/components/: layout.tsx
pypes-gui/src/pages/: global.css  index.tsx
pypes-gui/src/store/: connection.slice.ts  main.slice.ts  node.slice.ts  store.ts
pypes-gui/src/utils/: trpc.ts
(+186 files in other folders)
