[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Zsolt Szabó <szabo.zsolt@lexunit.hu>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
pytest = "^7.3.2"
httpx = "^0.24.1"
requests = "==2.31.0"
prefect = "==2.15.0"
loguru = "^0.7.0"
flows_prep = {git = "git@github.com:we3lab/flows-prep.git"}
python-multipart = ">=0.0.6"
boto3 = "^1.28.2"
psycopg2 = "^2.9.6"
prefect-aws = "^0.3.6"
ujson = "^5.8.0"
numpy = "==1.26.4"

s3fs = "^2023.6.0"
anyio = ">=3.7.1"
python-jose = "^3.3.0"
pyarrow = "^13.0.0"
bcrypt = "^4.1.3"
google-auth = "^2.29.0"
google-api-python-client = "^2.132.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
