[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Zsolt Szabó", email = "szabo.zsolt@lexunit.hu" },
    { name = "Jose Bolorinos", email = "josebolorinos@gmail.com" },
]
maintainers = [
    { name = "Fletcher Chapin", email = "fchapin@stanford.edu" },
    { name = "Lily Liu", email = "liuyinli@stanford.edu" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
pytest = "^7.3.2"
httpx = "^0.24.1"
requests = "==2.31.0"
loguru = "^0.7.0"
python-multipart = ">=0.0.6"
boto3 = "^1.28.2"
psycopg2 = "^2.9.6"
ujson = "^5.8.0"
numpy = "==1.26.4"

s3fs = "^2023.6.0"
anyio = ">=3.7.1"
python-jose = "^3.3.0"
pyarrow = "^13.0.0"
bcrypt = "^4.1.3"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
